--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,21 +82,33 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 10vh; /* ajustez la hauteur minimale au besoin */
-  padding: 20px 0; /* Centrer le contenu de chaque div */
+  min-height: 10vh;
+  padding: 20px 0;
 }
 /* Titre */
 .title {
   text-align: center;
-  margin: 0 auto; /* Centrer le titre */
+  margin: 0 auto;
   color: #000000;
 }
 
 .artist-page {
   margin-top: 50px;
-  max-width: 1200px; /* ajustez selon votre design */
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.artists-member {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #dddddd;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .artists-container {
@@ -109,34 +121,60 @@ main {
   min-height: 80vh;
   margin-bottom: 30px;
 }
-/* Équipe */
 
-/* Membre de l'équipe */
-.artists-member {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centrer le contenu de chaque carte horizontalement */
-  background-color: #dddddd;
-  padding: 20px;
-  border-radius: 10px;
+.image-container {
+  position: relative;
+  width: 100%; /* ou une largeur fixe si nécessaire */
+  height: 100%; /* ou une hauteur fixe si nécessaire */
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  border-radius: 5%; /* pour maintenir les styles existants */
+  object-fit: cover; /* assure que l'image couvre entièrement le conteneur */
+}
+
+.text-overlay {
+  position: absolute;
+  bottom: 0; /* Positionne le texte en bas du conteneur */
+  left: 0;
+  width: 100%; /* Le texte couvre toute la largeur de l'image */
+  padding: 10px; /* Ajoute un peu d'espacement autour du texte */
+  text-align: center; /* Centre le texte horizontalement */
+  color: white; /* Assure que le texte est lisible */
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(0, 0, 0, 0) 100%
+  ); /* Dégradé de noir vers transparent */
+}
+
+.text-overlay p {
+  opacity: 0; /* Cache le texte par défaut */
+  transform: translateY(20px); /* Commence légèrement décalé vers le bas */
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out; /* Transition pour l'opacité et la transformation */
+}
+
+.artists-image:hover .text-overlay p {
+  opacity: 1; /* Rend le texte visible lors du survol */
+  transform: translateY(0); /* Remet le texte à sa position initiale */
 }
 
 /* Image de l'équipe */
 .artists-image {
   display: flex;
-  align-items: center; /* Centrer les éléments verticalement dans la carte */
-  justify-content: center; /* Centrer les éléments horizontalement dans la carte */
+  align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
   background-color: #f4f4f4;
   padding: 20px;
   border-radius: 10px;
 }
-
-/* Image individuelle */
-.image {
-  border-radius: 50%; /* Images rondes */
-  width: 100px; /* Largeur fixe */
-  height: 100px; /* Hauteur fixe */
+.text-bottom {
+  width: 100%;
+  margin-top: auto;
+  text-align: center;
 }
 
 /* FOOTER */
