--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,9 +40,10 @@ nav {
 
 nav ul {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   flex-grow: 1;
   gap: 20px;
+  font-size: 15px;
 }
 
 /* Logo et Connexion */
@@ -174,6 +175,40 @@ main {
   padding: 20px;
   border-radius: 10px;
 }
+
+.artist-details {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+
+.artist-details img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+#artistName {
+  color: #333;
+  margin-top: 0.5rem;
+}
+
+#artistBio {
+  color: #666;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+#artistTopTracks div {
+  margin-bottom: 10px;
+  padding: 5px;
+  background-color: #e9e9e9;
+  border-radius: 5px;
+}
+
 .text-bottom {
   width: 100%;
   margin-top: auto;
