--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,44 +177,40 @@ main {
 }
 
 .artist-details {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 20px auto;
   padding: 20px;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
-.artist-details img {
-  max-width: 100%;
+.artist-title {
+  margin-bottom: 20px;
+}
+
+.artist-content {
+  display: flex;
+  align-items: flex-start; /* Alignement des éléments en haut */
+}
+
+.image-container {
+  margin-right: 20px; /* Espace entre l'image et la bio */
+}
+
+#artistImage {
+  width: 300px; /* Largeur fixe pour l'image */
   height: auto;
   border-radius: 10px;
 }
 
-#artistName {
-  color: #333;
-  margin-top: 0.5rem;
-}
-
-#artistBio {
-  color: #666;
+.artist-bio {
+  flex-grow: 1; /* Permet à la bio de prendre l'espace restant */
   font-size: 1rem;
-  margin-bottom: 1rem;
+  color: #666;
 }
-
-#artistTopTracks div {
-  margin-bottom: 10px;
-  padding: 5px;
-  background-color: #e9e9e9;
-  border-radius: 5px;
-}
-
-.text-bottom {
-  width: 100%;
-  margin-top: auto;
-  text-align: center;
-}
-
 /* FOOTER */
 footer {
   background-color: #333333;
@@ -236,5 +232,15 @@ footer {
 
   .artists-container {
     grid-template-columns: 1fr; /* Une colonne sur les petits écrans */
+  }
+
+  .artist-content {
+    flex-direction: column;
+  }
+
+  #artistImage {
+    max-width: 100%; /* L'image prend toute la largeur sur petits écrans */
+    margin-right: 0;
+    margin-bottom: 20px; /* Espace entre l'image et la bio sur petits écrans */
   }
 }
