--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -236,7 +236,7 @@ main {
   margin-bottom: 20px;
   margin-left: 20px;
   padding: 10px;
-  background-color: #f0f0f0;
+  background-color: #f5f5dc;
   border-radius: 5px;
 }
 
